1.5.6
- cosmetic: change title font : Times New Roman

1.5.5
- cosmetic: log and title are now aligned

1.5.4
- fix #15 Le nombre de 1cc dans le hall of 1cc est faux pour certains joueurs

1.5.3
- fix #14 [#|2011-12-31T12:36:38.394+0100|WARNING|glassfish3.0.1|javax.enterprise.resource.webcontainer.jsf.renderkit|_ThreadID=52;_ThreadName=Thread-1;|JSF1090 : Le cas de navigation n'est pas résolu pour le composant j_idt25.|#]
- fix #12 JSF1058 : La ressource référencée par to-view-id, 'monthly-contest.xhtml', pour la navigation depuis '*', ne commence pas par ''/''. Ce caractère sera ajouté pour vous, mais l'erreur doit être corrigée

1.5.2
- fix #13 NPE in ScoreBean

1.5.1
- fix #4 Dans stats, on remarque que le jeu le plus joué est Blazing Star avec 22 hi-scores, alors que Metal Slug en a 23 des hi-scores.
- fix #5 Centrer les règles
- fix #6 Traduire les règles
- fix #8 ATTENTION: JSF1090
- fix #9 INFO: Skipping call to libraryExists(). Please set context-param com.sun.faces.enableMissingResourceLibraryDetection to true to verify if library http://java.sun.com/jsf/composite/emcomp actually exists

1.5.0
- feature: add monthly contest page

1.4.9
- minor feature: Add rules page
- minor feature: Add rank computation on all pages
- minor feature: Only MVS level
- minor feature: No limit to top ten anymore

1.4.8
- bug fix: Unlocked titles duplication
- bug fix: Unplayed games ordered by name

1.4.7
- feature: Add google analytics tracker

1.4.6
- feature: Add column to decide if game are improvable (means that score could be improved easily)

1.4.5
1.4.4
1.4.3
- bug fix: Home link was invalid

1.4.2
- feature: find improvable score

1.4.0
- feature: stats page

1.3.7
- bug fix: post on ngf checkbox is ignored if not rendered then rendered (edit page)
- feature: add stats page
- feature: add report bug link
- feature: add unplayed games

1.3.6
- bug fix: post on ngf checkbox is ignored if not rendered then rendered

1.3.5