@@ -74,10 +74,10 @@
                             <h:outputText value="${score.date}" converter="dateDDMMYYYYConverter" styleClass="date" />
                         </td>
                         <td>
-                            <a class="thumbnail" href="#thumb">
+                            <a class="thumbnail_right" href="#thumb">
                                 <img src="${score.pictureUrl}" width="30px" height="30px" />
                                 <span>
-                                    <img src="${score.pictureUrl}" width="500px"/>
+                                    <img src="${score.pictureUrl}" width="350px"/>
                                 </span>
                             </a>
                         </td>
