@@ -150,6 +150,39 @@ a:active, a:hover { color: orange; text-decoration: none; }
     left: -520px; /*position where enlarged image should offset horizontally */
 }
 
+.thumbnail_right{
+    position: relative;
+    z-index: 0;
+    color: #FFFFFF;
+}
+
+.thumbnail_right:hover{
+    background-color: transparent;
+    z-index: 50;
+}
+
+.thumbnail_right span{ /*CSS for enlarged image*/
+    position: absolute;
+    background-color: grey;
+    padding: 0px;
+    left: -1000px;
+    border: 1px solid grey;
+    visibility: hidden;
+    color: black;
+    text-decoration: none;
+}
+
+.thumbnail_right span img{ /*CSS for enlarged image*/
+    border-width: 0;
+    padding: 0px;
+}
+
+.thumbnail_right:hover span{ /*CSS for enlarged image on hover*/
+    visibility: visible;
+    top: -250px;
+    left: 0px; /*position where enlarged image should offset horizontally */
+}
+
 .button {
     padding: 5px 10px;
     display: block;
