@@ -1,5 +1,7 @@
 1.5.6
 - cosmetic: change title font : Times New Roman
+- fix #16 Le stage doit etre optionnel
+- fix #1? Dans la page des score d'un jeu, l'image apparait a droite
 
 1.5.5
 - cosmetic: log and title are now aligned
